--- a/src/Datasets/DataCreation.ipynb
+++ b/src/Datasets/DataCreation.ipynb
@@ -6,26 +6,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt  # type: ignore\n",
-    "from matplotlib import cm, colors  # type: ignore\n",
-    "from dotenv import load_dotenv\n",
-    "import geopandas as gpd  # type: ignore\n",
-    "import sqlalchemy as sq\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os, sys\n",
+    "import sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from Shared.DataService import DataService\n",
-    "\n",
     "from Datasets.DataCreation import (\n",
     "    getDatasetV1,\n",
-    "    getWeatherData_v1,\n",
     "    getDatasetV2,\n",
-    "    getSoilData,\n",
     "    getDatasetV3,\n",
     "    getDatasetV4,\n",
-    ")"
+    ")\n",
+    "\n",
+    "\n",
+    "# List of months of interest\n",
+    "M = [\"01\", \"02\", \"03\", \"04\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Load and display Dataset1\n",
+    "\n",
+    "```\n",
+    "    v1: contains only has_ergot as an output from ergot table and all the weather attributes as input from weather table\n",
+    "        Target: \"has_ergot\" from ergot table\n",
+    "\n",
+    "    Problem statement: Given a district and its weather attributes -> predict if the district is gonna have ergot or not.\n",
+    "\n",
+    "    Parameters:\n",
+    "        months: list of months for which the soil moisture data is required.\n",
+    "    note : If months is None, then the function returns the soil moisture data for all months.\n",
+    "\n",
+    "    To-do: we currently take the mean of all months for each attribute ->\n",
+    "        need to test on specific months because ergot won't grow in winter\n",
+    "```"
    ]
   },
   {
@@ -34,46 +49,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv()\n",
-    "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
-    "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
-    "PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
-    "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
-    "PG_PW = os.getenv(\"POSTGRES_PW\")\n",
-    "\n",
-    "if (\n",
-    "    PG_DB is None\n",
-    "    or PG_ADDR is None\n",
-    "    or PG_PORT is None\n",
-    "    or PG_USER is None\n",
-    "    or PG_PW is None\n",
-    "):\n",
-    "    raise ValueError(\"Environment variables not set\")\n",
-    "\n",
-    "# connecting to database\n",
-    "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
-    "conn = db.connect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m = [\"01\", \"02\", \"03\", \"04\"]\n",
     "dataset_v1 = getDatasetV1(None)\n",
     "dataset_v1"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dataset_v2 = getDatasetV2(m)\n",
-    "dataset_v2"
+    "Purpose:  \n",
+    "Load and display Dataset1\n",
+    "\n",
+    "```\n",
+    "    v_2: contains only has_ergot as an output from ergot table and all attributes from weather, soil_moisture, soil data as input\n",
+    "        Target: \"has_ergot\" from ergot table\n",
+    "\n",
+    "    Problem statement: Given a district and other attributes from weather, soil_moisture, soil data -> predict if the district is gonna have ergot or not.\n",
+    "\n",
+    "    Parameters:\n",
+    "        months: list of months for which the soil moisture data is required.\n",
+    "    note : If months is None, then the function returns the soil moisture data for all months.\n",
+    "\n",
+    "    To-do: Need to get the weather data|soil_moisture for only the month with the appearance of ergot (ergot wont grow in winter)\n",
+    "```"
    ]
   },
   {
@@ -82,8 +80,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v3 = getDatasetV3(None)\n",
-    "v3"
+    "dataset_v2 = getDatasetV2(M)\n",
+    "dataset_v2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Load and display Dataset1\n",
+    "\n",
+    "```\n",
+    "    v_3: contains ergot, weather, soil_moisture, soil data\n",
+    "        Target: \"incidence\" from ergot table\n",
+    "\n",
+    "    Problem statement: Given an ergot sample and its all given attributes -> predict if the district is gonna have ergot or not.\n",
+    "\n",
+    "    Parameters:\n",
+    "        months: list of months for which the soil moisture data is required.\n",
+    "    note : If months is None, then the function returns the soil moisture data for all months.\n",
+    "\n",
+    "    To-do: we currently take the mean of all months for each attribute ->\n",
+    "        need to test on specific months because ergot won't grow in winter\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v3 = getDatasetV3(None)\n",
+    "dataset_v3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Load and display Dataset1\n",
+    "\n",
+    "```\n",
+    "    v_4: contains ergot, weather, soil_moisture, soil data\n",
+    "        Target: \"sellable\" from ergot table\n",
+    "\n",
+    "    Problem statement: Given a district and its all given attributes -> predict that if the district produced the crop which are sellable.\n",
+    "\n",
+    "    Parameters:\n",
+    "        months: list of months for which the soil moisture data is required.\n",
+    "    note : If months is None, then the function returns the soil moisture data for all months.\n",
+    "\n",
+    "    To-do: we currently take the mean of all months for each attribute ->\n",
+    "        need to test on specific months because ergot won't grow in winter\n",
+    "```"
    ]
   },
   {
@@ -95,20 +147,6 @@
     "dataset_v4 = getDatasetV4(None)\n",
     "dataset_v4"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
