Added more guidelines

--- a/src/Models/Boost/BoostSatellite.ipynb
+++ b/src/Models/Boost/BoostSatellite.ipynb
@@ -5,7 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "how this notebook works"
+    "## Gradient Boosting Model on Satellite Data\n",
+    "\n",
+    "- Gradient builds an additive model in a forward stage-wise fashion, which allows for the optimization of arbitrary differentiable loss functions. "
    ]
   },
   {
@@ -15,7 +17,6 @@
    "outputs": [],
    "source": [
     "# dependencies\n",
-    "\n",
     "import pandas as pd\n",
     "import sqlalchemy as sq\n",
     "import sys, os\n",
@@ -40,8 +41,7 @@
     "\n",
     "sys.path.append(\"../../\")\n",
     "os.chdir(\"../../\")\n",
-    "from ModelBuilderMethods import getConn, extractYears, scaleColumns, encodeColumns\n",
-    "from Models.models_ensemble import getBalancedClassifier, getClassifier"
+    "from ModelBuilderMethods import getConn, extractYears"
    ]
   },
   {
@@ -60,7 +60,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "setting up a dataset"
+    "### <u>**Step 1**</u>: Data Selection\n",
+    "\n",
+    "In this step, we would choose the particular data/table, pick attributes from existing tables. Further aggregation/feature engineer can be done here to support the point of the research.\n",
+    "\n",
+    "Particular, for this notebook, we grab the following data and merge them (on year, district) into a single table:\n",
+    "- weather data from Satellite\n",
+    "- ergot data (downgrade)"
    ]
   },
   {
@@ -69,24 +75,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weatherStationQuery = sq.text(\n",
-    "    \"\"\"\n",
-    "    SELECT * from dataset_cross_monthly_station\n",
-    "\"\"\"\n",
-    ")\n",
-    "\n",
     "weatherSatQuery = sq.text(\n",
     "    \"\"\"\n",
     "    SELECT * from dataset_cross_monthly_sat\n",
-    "\"\"\"\n",
-    ")\n",
-    "\n",
-    "ergotPrevYearsAggQuery = sq.text(\n",
-    "    \"\"\"\n",
-    "    SELECT year, district, \n",
-    "    present_prev1, present_prev2, present_prev3,\n",
-    "    percnt_true_prev1, percnt_true_prev2, percnt_true_prev3 \n",
-    "    from agg_ergot_sample_v2\n",
     "\"\"\"\n",
     ")\n",
     "\n",
@@ -107,7 +98,6 @@
     "\n",
     "# stationDf = pd.read_sql(weatherStationQuery, conn)\n",
     "satelliteDf = pd.read_sql(weatherSatQuery, conn)\n",
-    "ergotPrevDf = pd.read_sql(ergotPrevYearsAggQuery, conn)\n",
     "ergotTargetDf = pd.read_sql(ergotTargetQuery, conn)\n",
     "\n",
     "conn.close()\n",
@@ -121,11 +111,7 @@
    "outputs": [],
    "source": [
     "# merge on year and district\n",
-    "# tempdf = pd.merge(satelliteDf, ergotPrevDf, on=[\"year\", \"district\"], how=\"left\")\n",
-    "# del satelliteDf\n",
-    "# del ergotPrevDf\n",
     "tempdf = satelliteDf\n",
-    "# tempdf = stationDf\n",
     "\n",
     "# merge on year and district\n",
     "datasetDf = pd.merge(ergotTargetDf, tempdf, on=[\"year\", \"district\"], how=\"left\")\n",
@@ -134,10 +120,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "categorical values [one-hot encoding](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html)  \n"
+    "Then, the district number would be categorized using [one-hot encoding](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html) techniques.\n",
+    "\n",
+    "One-hot encoding techniques would take input, which is a categorical value. Then, the features are encoded using a one-hot (aka ‘one-of-K’ or ‘dummy’) encoding scheme. This creates a binary column for each category and returns a sparse matrix or dense array (depending on the sparse_output parameter).\n"
    ]
   },
   {
@@ -158,10 +147,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "splitting the dataset"
+    "### <u>**Step 2**</u>: Splitting dataset\n",
+    "\n",
+    "- We split the whole dataset into the train/test split. Particularly, split them by year (1995 - 2015 for training, 2016 - 2020 for testing) since this is a time series data."
    ]
   },
   {
@@ -192,8 +184,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "balancing the dataset https://imbalanced-learn.org/stable/\n",
-    "\n"
+    "### <u>**Step 3**</u>: [Balancing the dataset](https://imbalanced-learn.org/stable/)\n",
+    "\n",
+    "- Our dataset is unbalanced and can lead to bias when training/testing. Balacing step would help to eliminate the bias of the dataset, thus provide more reliable results.\n"
    ]
   },
   {
@@ -753,15 +746,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### normalization / scaling\n",
+    "### <u>**Step 4**</u>: Regularization / Normalization\n",
     "some blurb about scalers  \n",
-    "0 [MinMaxScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html)             \n",
-    "1 [MaxAbsScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MaxAbsScaler.html)  \n",
-    "2 [StandardScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html)  \n",
-    "3 [RobustScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.RobustScaler.html)  \n",
-    "4 [Normalizer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.Normalizer.html)  \n",
-    "5 [PowerTransformer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.PowerTransformer.html)  \n",
-    "6 [QuantileTransformer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.QuantileTransformer.html)  "
+    "\n",
+    "1. [MinMaxScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html)             \n",
+    "2. [MaxAbsScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MaxAbsScaler.html)  \n",
+    "3. [StandardScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html)  \n",
+    "4. [RobustScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.RobustScaler.html)  \n",
+    "5. [Normalizer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.Normalizer.html)  \n",
+    "6. [PowerTransformer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.PowerTransformer.html)  \n",
+    "7. [QuantileTransformer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.QuantileTransformer.html)  "
    ]
   },
   {
@@ -813,7 +807,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "selecting a model"
+    "### <u>**Step 5**</u>: Gradient Boosting Classifier Model"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <u>**Step 5.1**</u>: Initialize the model"
    ]
   },
   {
@@ -854,6 +856,14 @@
     "balanced_xgboost_model = XGBClassifier(\n",
     "    n_estimators=ESTIMATORS, random_state=42, max_depth=DEPTH, verbosity=1, n_jobs=CORES\n",
     ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <u>**Step 5.2**</u>: Fit the training data to the model"
    ]
   },
   {
@@ -918,6 +928,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <u>**Step 5.3**</u>: Test the model on the testing dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -966,6 +984,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <u>**Step 5.4**</u>: Evaluate models based on different metrics:\n",
+    "- ACCURACY:\n",
+    "- PRECISION:\n",
+    "- RECALL:\n",
+    "- F1:\n",
+    "- ROC AUC:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -995,7 +1026,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "print model performance metrics on test data"
+    "##### <u>**Step 5.5**</u>: Exports metric results to csv"
    ]
   },
   {
