--- a/src/Models/Boost/BoostStation.ipynb
+++ b/src/Models/Boost/BoostStation.ipynb
@@ -41,8 +41,7 @@
     "\n",
     "sys.path.append(\"../../\")\n",
     "os.chdir(\"../../\")\n",
-    "from ModelBuilderMethods import getConn, extractYears, scaleColumns, encodeColumns\n",
-    "from Models.models_ensemble import getBalancedClassifier, getClassifier"
+    "from ModelBuilderMethods import getConn, extractYears"
    ]
   },
   {
@@ -799,6 +798,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <u>**Step 5.1**</u>: Initialize the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -836,6 +843,14 @@
     "balanced_xgboost_model = XGBClassifier(\n",
     "    n_estimators=ESTIMATORS, random_state=42, max_depth=DEPTH, verbosity=1, n_jobs=CORES\n",
     ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <u>**Step 5.2**</u>: Fit the training data to the model"
    ]
   },
   {
@@ -1001,6 +1016,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <u>**Step 5.3**</u>: Test the model on the testing dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1069,6 +1092,19 @@
     "print(pd.DataFrame(predictions_balanced_rusboost).value_counts())\n",
     "print(pd.DataFrame(predictions_xgboost).value_counts())\n",
     "print(pd.DataFrame(predictions_balanced_xgboost).value_counts())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <u>**Step 5.4**</u>: Evaluate models based on different metrics:\n",
+    "- ACCURACY:\n",
+    "- PRECISION:\n",
+    "- RECALL:\n",
+    "- F1:\n",
+    "- ROC AUC:"
    ]
   },
   {
@@ -1244,7 +1280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "print model performance metrics on test data"
+    "##### <u>**Step 5.5**</u>: Exports metric results to csv"
    ]
   },
   {
