added documentation to loadData.ipynb

--- a/src/Ergot/featureEngErgot.ipynb
+++ b/src/Ergot/featureEngErgot.ipynb
@@ -234,7 +234,7 @@
     "            createErgotFeatEngTableV1(db)\n",
     "\n",
     "        ergotDf.to_sql(\n",
-    "            TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False\n",
+    "            TABLENAME, conn, schema=\"public\", if_exists=\"replace\", index=False\n",
     "        )\n",
     "    except Exception as e:\n",
     "        print(\"An error occurred while writing to the database {}\".format(e))\n",
