--- a/src/Soil/importSoil.ipynb
+++ b/src/Soil/importSoil.ipynb
@@ -378,7 +378,7 @@
     "    soilData.rename(columns={\"WOOD\": \"percnt_wood\"}, inplace=True)\n",
     "\n",
     "    soilData.to_sql(\n",
-    "        SOIL_DATA_TABLE, conn, schema=\"public\", if_exists=\"append\", index=False\n",
+    "        SOIL_DATA_TABLE, conn, schema=\"public\", if_exists=\"replace\", index=False\n",
     "    )"
    ]
   },
