--- a/src/WeatherStation/CombineProvinceData.ipynb
+++ b/src/WeatherStation/CombineProvinceData.ipynb
@@ -94,7 +94,7 @@
     "\n",
     "    try:\n",
     "        dfCombined.to_sql(\n",
-    "            TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False\n",
+    "            TABLENAME, conn, schema=\"public\", if_exists=\"replace\", index=False\n",
     "        )\n",
     "    except Exception as e:\n",
     "        print(\"An error occurred while writing to the database {}\".format(e))\n",
