--- a/src/loadData.ipynb
+++ b/src/loadData.ipynb
@@ -538,7 +538,7 @@
     "\n",
     "Updating the data: \n",
     "- This script will only pull data that has not been stored in the database yet\n",
-    "- Copernicus needs an API key which if access has been/still is gratned can be setup with the [following steps](https://cds.climate.copernicus.eu/api-how-to)\n",
+    "- Copernicus needs an API key which if access has been/still is granted can be setup with the [following steps](https://cds.climate.copernicus.eu/api-how-to)\n",
     "\n",
     "Remarks: \n",
     "- Logs are set up, therefore, if an error is encountered it will be recorded and that entry would be skipped over"
