need to finish proof reading loadData.ipynb

--- a/src/Datasets/DatasetJS.ipynb
+++ b/src/Datasets/DatasetJS.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# DatasetJS.ipynb\n",
     "\n",
-    "After all the data has been loaded and aggregated, this notebook creates the final datasets\n",
+    "After [all the data has been loaded and aggregated](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/loadData.ipynb), this notebook creates the final datasets\n",
     "\n",
     "Required tables:\n",
     "- [COMBINED_WEATHER_TABLE](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#agg_weather_combined)\n",
