--- a/src/SatelliteCopernicus/pullCopernicusData.ipynb
+++ b/src/SatelliteCopernicus/pullCopernicusData.ipynb
@@ -5,14 +5,16 @@
    "metadata": {},
    "source": [
     "# pullCopernicusData.ipynb\n",
-    "After [loading the agriculture regions](), the following script can be used to load the Copernicus Satellite Data\n",
+    "After [loading the agriculture regions](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/WeatherStation/importBoundariesAndStations.ipynb), the following script can be used to load the Copernicus Satellite Data\n",
     "- Only pulls for new dates\n",
     "- Uses logs\n",
     "\n",
     "##### Output:\n",
     "- [agg_day_copernicus_satellite_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#agg_day_copernicus_satellite_data)\n",
     "\n",
-    "##### Remarks: null values - na.mask, null etc... can sometimes cause issues"
+    "##### Remarks: \n",
+    "- null values - na.mask, null etc... can sometimes cause issues\n",
+    "- Copernicus needs an API key which if access has been/still is granted can be setup with the [following steps](https://cds.climate.copernicus.eu/api-how-to)"
    ]
   },
   {
