--- a/src/SatelliteSoilMoisture/soilMoistureVisualization.ipynb
+++ b/src/SatelliteSoilMoisture/soilMoistureVisualization.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# soilMoistureVisualization.ipynb\n",
-    "After [aggregating the soil moisture data]() the following script can be used to visualize the data\n",
+    "After [aggregating the soil moisture data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/SatelliteSoilMoisture/soilMoistureAggregation.ipynb) the following script can be used to visualize the data\n",
     "\n",
     "##### Output graphs:\n",
     "- Correlation plot\n",
