--- a/src/Soil/soilAggregation.ipynb
+++ b/src/Soil/soilAggregation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# soilAggregation.ipynb\n",
     "\n",
-    "After [loading the soil data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/Soil/importSoil.ipynb) and [agriculture regions data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/WeatherStation/Data_step%20csv%20import%20geo%20boundaries%20stations.ipynb) the following can be used to aggregate the soil data per district\n",
+    "After [loading the soil data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/Soil/importSoil.ipynb) and [agriculture regions data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/WeatherStation/importBoundariesAndStations.ipynb) the following can be used to aggregate the soil data per district\n",
     "\n",
     "##### Output table:\n",
     "- [agg_soil_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#agg_soil_data)"
