--- a/src/WeatherStation/CombineProvinceData.ipynb
+++ b/src/WeatherStation/CombineProvinceData.ipynb
@@ -104,25 +104,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Loads the weather station data per province from the weather station data tables\n",
+    "\n",
+    "Tables:  \n",
+    "- [ab_hly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#ab_hly_station_data)\n",
+    "- [mb_hly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#mb_hly_station_data)\n",
+    "- [sk_hly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#sk_hly_station_data)\n",
+    "\n",
+    "Psuedocode:  \n",
+    "- Create the weather station data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pullHlyWeatherData(conn: sq.engine.Connection) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    Purpose:\n",
-    "    Loads the weather station data per province from the weather station data tables\n",
-    "\n",
-    "    Tables:\n",
-    "    - [ab_hly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#ab_hly_station_data)\n",
-    "    - [mb_hly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#mb_hly_station_data)\n",
-    "    - [sk_hly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#sk_hly_station_data)\n",
-    "\n",
-    "    Psuedocode:\n",
-    "    - Create the weather station data SQL query\n",
-    "    - [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
-    "    \"\"\"\n",
     "    weatherDataQuery = sq.text(\n",
     "        f\"\"\"\n",
     "        SELECT * FROM public.{AB_HLY_TABLE}\n",
@@ -137,25 +141,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Purpose:  \n",
+    "Loads the weather station data per province from the weather station data tables\n",
+    "\n",
+    "Tables:  \n",
+    "- [ab_dly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#ab_dly_station_data)\n",
+    "- [mb_dly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#mb_dly_station_data)\n",
+    "- [sk_dly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#sk_dly_station_data)\n",
+    "\n",
+    "Psuedocode:  \n",
+    "- Create the weather station data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pullDlyWeatherData(conn: sq.engine.Connection) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    Purpose:\n",
-    "    Loads the weather station data per province from the weather station data tables\n",
-    "\n",
-    "    Tables:\n",
-    "    - [ab_dly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#ab_dly_station_data)\n",
-    "    - [mb_dly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#mb_dly_station_data)\n",
-    "    - [sk_dly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#sk_dly_station_data)\n",
-    "\n",
-    "    Psuedocode:\n",
-    "    - Create the weather station data SQL query\n",
-    "    - [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
-    "    \"\"\"\n",
     "    weatherDataQuery = sq.text(\n",
     "        f\"\"\"\n",
     "        SELECT * FROM public.{AB_DLY_TABLE}\n",
@@ -170,20 +179,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Aggregate the hourly weather station data by district, year, month and day\n",
+    "\n",
+    "Psuedocode:  \n",
+    "- Aggregate the columns by district, year, month and day\n",
+    "- Name the columns into the final DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def aggregateHlyData(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    Purpose:\n",
-    "    Aggregate the hourly weather station data by district, year, month and day\n",
-    "\n",
-    "    Psuedocode:\n",
-    "    - Aggregate the columns by district, year, month and day\n",
-    "    - Name the columns into the final DataFrame\n",
-    "    \"\"\"\n",
     "    agg_df = (\n",
     "        df.groupby([\"district\", \"year\", \"month\", \"day\"])\n",
     "        .agg(\n",
@@ -245,20 +258,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Aggregate the daily weather station data by district and date\n",
+    "\n",
+    "Psuedocode:  \n",
+    "- Aggregate the columns by district and date\n",
+    "- Name the columns into the final DataFrame\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def aggregateDlyData(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    Purpose:\n",
-    "    Aggregate the daily weather station data by district and date\n",
-    "\n",
-    "    Psuedocode:\n",
-    "    - Aggregate the columns by district and date\n",
-    "    - Name the columns into the final DataFrame\n",
-    "    \"\"\"\n",
     "    agg_df = (\n",
     "        df.groupby([\"district\", \"year\", \"month\", \"day\"])\n",
     "        .agg(\n",
@@ -302,26 +319,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Purpose:  \n",
+    "Loads the weather stations from the daily weather station table\n",
+    "\n",
+    "Tables:  \n",
+    "- [stations_dly](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#stations_dly)\n",
+    "\n",
+    "Psuedocode:  \n",
+    "- Create the weather station SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
+    "- [Cast district into an integer](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.astype.html)\n",
+    "\n",
+    "Remarks: if district is not casted, future methods will throw errors"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pullStationData(conn: sq.engine.Connection) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    Purpose:\n",
-    "    Loads the weather stations from the daily weather station table\n",
-    "\n",
-    "    Tables:\n",
-    "    - [stations_dly](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#stations_dly)\n",
-    "\n",
-    "    Psuedocode:\n",
-    "    - Create the weather station SQL query\n",
-    "    - [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
-    "    - [Cast district into an integer](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.astype.html)\n",
-    "\n",
-    "    Remarks: if district is not casted, future methods will throw errors\n",
-    "    \"\"\"\n",
     "    stationDataQuery = sq.text(\n",
     "        f\"\"\"\n",
     "        SELECT station_id, district FROM public.{DLY_STATIONS}\n",
