--- a/src/WeatherStation/StationVisualization.ipynb
+++ b/src/WeatherStation/StationVisualization.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# stationVisualization.ipynb\n",
-    "After loading the [weather stations into the database](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/WeatherStation/Data_step%20csv%20import%20geo%20boundaries%20stations.ipynb) the following script can be used to visualize the spread of the stations as well as the data they hold\n",
+    "After loading the [weather stations into the database](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/WeatherStation/importBoundariesAndStations.ipynb) the following script can be used to visualize the spread of the stations as well as the data they hold\n",
     "\n",
     "##### Output graphs:\n",
     "- Station summaries for each district ([such as...](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/.github/img/TLDR.png))\n",
