--- a/src/WeatherStation/stationDataVisualization.ipynb
+++ b/src/WeatherStation/stationDataVisualization.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# stationDataVisualization.ipynb\n",
-    "After aggregating the weather station data the following script can be used to visualize the data\n",
+    "After [aggregating the weather station data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/WeatherStation/CombineProvinceData.ipynb) the following script can be used to visualize the data\n",
     "\n",
     "##### Output graphs:\n",
     "- Correlation plot ([such as ...](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/.github/img/hlyCorrPlot.png) or [this](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/.github/img/dlyCorrPlot.png))\n",
