--- a/src/Datasets/DataCreation.ipynb
+++ b/src/Datasets/DataCreation.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DataCreation.ipynb\n",
+    "\n",
+    "After loading the dataset, this class creates different datasets to be used in the modeling process\n",
+    "\n",
+    "##### Datasets present:\n",
+    "- v1: Given a district and its weather attributes -> predict if the district is gonna have ergot or not\n",
+    "- v2: Given a district and other attributes from weather, soil_moisture, soil data -> predict if the district is gonna have ergot or not\n",
+    "- v3: Given an ergot sample and its all given attributes -> predict if the district is gonna have ergot or not\n",
+    "- v4: Given a district and its all given attributes -> predict that if the district produced the crop which are sellable"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
